[package]
name = "oci-registry"
version = "0.1.0"
edition = "2018"

[dependencies]
bytes = "1.1.0"
futures = "0.3.17"
futures-core = "0.3.17"
indicatif = { version = "0.16.2", optional = true }
lazy_static = "1.4.0"
oci-spec = { version = "0.5.1" }
regex = "1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.11.0", features = ["fs"] }
